# wasm-obs-agent-lib

./: Cargo.toml  readme
examples/: custom_endpoint.rs  simple.rs
src/: exporter.rs  instrument.rs  lib.rs  observer.rs  wrapper.rs
