[package]
name = "wasm-obs-agent-lib"
version = "0.1.0"
edition = "2021"
description = "Auto-instrumentación de módulos WASM con OpenTelemetry"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Omar52344/wasm-obs-agent-lib"
keywords = ["wasm", "opentelemetry", "telemetry", "wasmtime", "tracing"]
categories = ["development-tools", "wasm"]

[dependencies]
wasmtime = "24.0"
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["http-proto", "reqwest-client", "trace"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
anyhow = "1.0"
[features]
default = ["otlp"]
otlp = []