[package]
name = "wasm-obs-agent-lib"
version = "0.1.7"
edition = "2021"
description = "Auto-instrumentación de módulos WASM con OpenTelemetry"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Omar52344/wasm-obs-agent-lib"
keywords = ["wasm", "opentelemetry", "telemetry", "wasmtime", "tracing"]
categories = ["development-tools", "wasm"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
wasmtime = "24.0"
wasmtime-wasi = "24.0.0"
opentelemetry = {version ="0.31",features = ["trace"]}
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "reqwest-client"], default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
anyhow = "1.0"
[features]
default = ["otlp"]
otlp = []
